--- a/index.html
+++ b/index.html
@@ -4,14 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>TTCS</title>
 </head>
-<body>
+<body style="background-color: rgb(0, 0, 34);">
 
-      <form action="https://formsubmit.co/jemavaki@mailgolem.com" method="POST">
-        <input type="text" name="name" required>
-        <input type="email" name="email" required>
-        <button type="submit">Send</button>
-   </form>
+  <div class="card">
+    <div class="card-body">
+      <form id="appointment-form">
+        <label for="first-name">First Name</label>
+        <input class="firstname " type="text" id="first-name" name="first-name" required>
+        <label for="last-name">Last Name</label>
+        <input type="text" id="last-name" name="last-name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" required>
+        <label for="appointment-time">Time:</label>
+        <input type="time" id="appointment-time" name="appointment-time">
+        <label for="appointment-date">Date:</label>
+        <input type="date" id="appointment-date" name="appointment-date">
+        <label for="pick-up">Pick up Location</label>
+        <input type="text" id="pick-up" name="pick-up" required>
+        <label for="drop-off">Drop off Location</label>
+        <input type="text" id="drop-off" name="drop-off" required>
+        <label for="passengers">Number of Passengers</label>
+        <input type="number" id="passengers" name="passengers" min="1" max="10" required>
+        <label for="special-requests">Special Requests</label>
+        <textarea id="special-requests" name="special-requests"></textarea>
+        <button  class="btn btn-outline-dark" id="submit" value="Submit">Submit</button>
+      </form>
+    </div>
+  </div>
+  
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+    <script src="public/js/index.js"></script>
 </body>
 </html>
