added google maps autofill for pickup/dropoff location form and added a map.

--- a/form.html
+++ b/form.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="public/css/style.css">
     <title>TTCS</title>
 </head>
-<body style="background-color: rgb(0, 0, 34);">
+<body style="background-color: rgb(152, 152, 152);">
   <header>
+    <style>
+     @media (min-width: 750px) {
+ 
+  .navagations{
+    display: none;
+  }
+}
+      @media (max-width: 750px) {
+  .header {
+    display: none;
+  }
+  .navagations{
+    display: block;
+    position: relative;
+  }
+}
+    </style>
     <div class="header fixed-top">
       <div class="menu">
        <svg class="line-top" width="0" height="15" viewbox="0,0 1000,20">
@@ -19,7 +36,7 @@
          y1="15"
          x2="1000"
          y2="15"
-         style="stroke: orange; stroke-width:2; stroke-linecap:round; stroke-dasharray: 180,1200; stroke-dashoffset: -35;"
+         style="stroke: orange; stroke-width:2; stroke-linecap:round; stroke-dasharray: 180,1200; stroke-dashoffset: -283;"
         />
        </svg>
        <ul>
@@ -35,8 +52,34 @@
        </svg>
       </div>
      </div>
-  </header>
+     <!-- nav bar 2 -->
 
+      <nav class="navagations navbar navbar-expand-md navbar-dark fixed-top">
+        <a class="navbar-brand" href="#">Your Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav">
+            <li class="nav-item m-2">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item m-2">
+              <a class="nav-link" href="form.html">BookOnline</a>
+            </li>
+            <li class="nav-item m-2">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item m-2">
+              <a class="nav-link" href="reviews.html">Reviews</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    
+     
+  </header>
+<div class="formmap">
   <div class="cardform" style="margin-top: 80px;">
     <div class="card-body">
       <form id="appointment-form">
@@ -53,10 +96,10 @@
         <label for="appointment-date">Date:</label>
         <input type="date" id="appointment-date" name="appointment-date">
         <label for="pick-up">Pick up Location</label>
-        <input type="text" id="pick-up" name="pick-up" required>
-        <label for="drop-off">Drop off Location</label>
-        <input type="text" id="drop-off" name="drop-off" required>
-        <label for="passengers">Number of Passengers</label>
+<input type="text" class="autocomplete" placeholder="Enter an address" id="pick-up" name="pick-up" required>
+<label for="drop-off">Drop off Location</label>
+<input type="text" class="autocomplete" placeholder="Enter an address" id="drop-off" name="drop-off" required>
+<label for="passengers">Number of Passengers</label>
         <input type="number" id="passengers" name="passengers" min="1" max="10" required>
         <label for="special-requests">Special Requests</label>
         <textarea id="special-requests" name="special-requests"></textarea>
@@ -64,12 +107,29 @@
       </form>
     </div>
   </div>
+  <div class="mapcontainer mx-auto">
+  <div id="map"></div>
+  <div  class="mapcontext text-center" id="mapcontexts">
+    <h2>Ride Estimates</h2>
+    <ul>
+      <li ><span class="distance">Distance:</span><br> <span id="distance"></span></li>
+      <li><span class="time">Time:</span><br> <span id="traveltime"></span></li>
+      <li><span class="price">Price:</span><br> <span id="price"></span></li>
+    </ul>
+  </div>
+</div>
+  </div>
   <footer style="background-color: rgb(0, 0, 34);">
 		<p>&copy; 2023 Thomson Team Car Service. All rights reserved.</p>
 	</footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js'></script>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnA__D7we39j6KjrIAvAnff9Kj5PicuhE&libraries=places"></script>
+    <script src="public/js/maps.js"></script>
     <script src="public/js/index.js"></script>
 </body>
 </html>
