--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="video-container">
         <video class="video" src="public/css/images/httpsa6e8z9v6.stackpathcdn.comlimokingyellowwp-contentuploads201512service-video-bg.mp4.mp4" autoplay muted loop></video>
         <div class="booksection mx-auto">
-            <h2 class="text-light text-center" style="font-family: 'Gruppo', cursive;">Call Now +1 (612)-999-5382 <br> <hr>or <hr> </h2>
+            <h2 class="text-light text-center" style="font-family: 'Gruppo', cursive;">Call Now <a class="phonenum" href="tel:(612)-999-5382" > +1 (612)-999-5382 </a><br> <hr>or <hr> </h2>
         <a role="button" href="form.html" class="btn btn-dark" style="display: grid;">Book Online</a>
         </div>
       </div>
@@ -59,6 +59,8 @@
 </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnA__D7we39j6KjrIAvAnff9Kj5PicuhE&libraries=places"></script>
+
     <script src="public/js/index.js"></script>
 </body>
 </html>
