--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="navbar-nav">
                   <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                   <a class="nav-link text-light" href="form.html">Book Now</a>
-                  <a class="nav-link text-light" href="#about">About Us</a>
+                  <a class="nav-link text-light" href="about.html">About Us</a>
                 </div>
               </div>
             </div>
