--- a/reviews.html
+++ b/reviews.html
@@ -42,6 +42,60 @@
   </header>
 
   <main>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Add Review
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel"> <h2>Add a Review</h2></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <section class="comment-form">
+         
+          <form>
+            <div class="form-group">
+              <label for="name">Name:</label>
+              <input type="text" id="name" class="form-control" required>
+            </div>
+            <div class="form-group">
+              <label for="rating">Rating:</label>
+              <select id="rating" class="form-control" required>
+                <option value="">Select a rating</option>
+                <option value="1">&#9733;</option>
+                <option value="2">&#9733;&#9733;</option>
+                <option value="3">&#9733;&#9733;&#9733;</option>
+                <option value="4">&#9733;&#9733;&#9733;&#9733;</option>
+                <option value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="comment">Comment:</label>
+              <textarea id="comment" rows="5" class="form-control" required></textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary">Submit Review</button>
+            </div>
+          </form>
+        </section>
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="submitreview">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="reviews">
+          <h2>Customer Reviews</h2>
+          <div id="reviews-list"></div>
+        </section>
 		<section class="review">
 			<h2>Great Service!</h2>
 			<p>Thomson Team Car Service provided excellent service. The staff was friendly and professional. They fixed my car quickly and it runs perfectly now. I highly recommend this company!</p>
@@ -361,33 +415,37 @@
     cursor: pointer;
   }
   </style>
-  <section class="comment-form">
-    <h2>Add a Review</h2>
-    <form>
+ <section class="comment-form">
+  <h2>Add a Review</h2>
+  <form>
+    <div class="form-group">
       <label for="name">Name:</label>
-      <input type="text " id="name" required>
+      <input type="text" id="name" class="form-control" required>
+    </div>
+    <div class="form-group">
       <label for="rating">Rating:</label>
-			<select id="rating" required>
-				<option value="">Select a rating</option>
-				<option value="1">&#9733;</option>
-				<option value="2">&#9733;&#9733;</option>
-				<option value="3">&#9733;&#9733;&#9733;</option>
-				<option value="4">&#9733;&#9733;&#9733;&#9733;</option>
-				<option value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</option>
-			</select>
-
-			<label for="comment">Comment:</label>
-			<textarea id="comment" rows="5" required></textarea>
-
-			<input type="submit" value="Submit Review">
-		</form>
-	</section>
-
-	<section class="reviews">
-		<h2>Customer Reviews</h2>
-		<div id="reviews-list"></div>
-	</section>
-
+      <select id="rating" class="form-control" required>
+        <option value="">Select a rating</option>
+        <option value="1">&#9733;</option>
+        <option value="2">&#9733;&#9733;</option>
+        <option value="3">&#9733;&#9733;&#9733;</option>
+        <option value="4">&#9733;&#9733;&#9733;&#9733;</option>
+        <option value="5">&#9733;&#9733;&#9733;&#9733;&#9733;</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="comment">Comment:</label>
+      <textarea id="comment" rows="5" class="form-control" required></textarea>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Submit Review</button>
+    </div>
+  </form>
+</section>
+<section class="reviews">
+  <h2>Customer Reviews</h2>
+  <div id="reviews-list"></div>
+</section>
 	<footer>
 		<p>&copy; 2023 Thomson Team Car Service. All rights reserved.</p>
 	</footer>
@@ -395,5 +453,6 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js'></script>
   <script src="https://smtpjs.com/v3/smtp.js">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
   <script src="public/js/reviews.js"></script></body>
 </html>
