changed homepage image, redid the css for reservation form, and add some styling to about us page.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
             </div>
           </nav>
           <div class="transition-container">
-            <img class="background" src="public/css/images/slider-item-1-2.jpg" alt="background picture">
+            <img class="background" src="https://wallpaperaccess.com/full/2296931.jpg" alt="background picture">
             <div class="text-container">
               <h1 class="maintext"><strong>The best Transportation<br> Service in The Twin Cities</strong></h1>
             </div>
           </div>
+          <div class="new-specialize-section"><div class="specialize-container-slider"><logo-slider><div class="specialize-container"><span><img src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/multi-day-events.png" alt="multi-day-events.png"/><p>Multi-Day-Events</p></span><span><img src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/large-events-festivals.png" alt="large-events-festivals.png"/><p>Large Scale Events</p></span><span><img src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/commuter-school-services.png" alt="commuter-school-services.png"/><p>Commuter &amp; Schools</p></span><span><img src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/Airport-transfer-service.png" alt="Airport-transfer-service.png"/><p>Airport Transfers</p></span><span><img src="https://assets.s3.amazonaws.com/images/front-end/new-landing/PNGs/vip-exclusive-events.png" alt="vip-exclusive-events.png"/><p>VIP Special Events</p></span></div></logo-slider></div></div>
           <div class="spacebtwpicandvid" id="about" >
             <div class="text one"><strong>About Us</strong> </div>
             <div class="text two">Welcome to Thomson Team Car Service, your premier luxury transportation provider.
