--- a/test.html
+++ b/test.html
@@ -1,64 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Gruppo&family=Poppins&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&family=Poppins:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/test.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reverse Geocoding</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnA__D7we39j6KjrIAvAnff9Kj5PicuhE&libraries=places"></script>
 </head>
 <body>
-    <div class="formbold-form-confirm">
-        <h4 class="mx-auto">
-          Please feel free to contact us at your convenience with any inquiries you may have by calling our dedicated line at <br> <a class="phonenum" href="tel:(612)-999-5382" > +1 (612)-999-5382 </a>.
-        </h4>
+  <button id="locationButton">Get Current Location</button>
+  <p id="address"></p>
+  <script >
+    document.getElementById("locationButton").addEventListener("click", function() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition, showError);
+  } else {
+    alert("Geolocation is not supported by this browser.");
+  }
+});
 
-        <div>
-          <table class="mx-auto">
-            <tr>
-              <th>Date:</th>
-              <td id="confirmdate">${date}</td>
-            </tr>
-            <tr>
-              <th>Time:</th>
-              <td id="confirmtime">${time}</td>
-            </tr>
-            <tr>
-              <th>Pick-up location:</th>
-              <td id="confirmpickup">${pickUp}</td>
-            </tr>
-            <tr>
-              <th>Drop-off location:</th>
-              <td id="confirmdropoff">${dropOff}</td>
-            </tr>
-            <tr>
-              <th>Car type:</th>
-              <td>2018 Lincoln MKX</td>
-            </tr>
-            <tr>
-            <th>Passengers:</th>
-            <td id="confirmpassengers">${passengers}</td>
-          </tr>
-          <tr>
-            <th>Special requests:</th>
-            <td id="confirmspecial">${specialRequests}</td>
-          </tr>
-          <tr>
-            <th>Ride Length:</th>
-            <td id="confirmlength">1min</td>
-          </tr>
-          <tr>
-            <th>Price:</th>
-            <td id="confirmprice">$60 <small><cite style="color: gray;">*Estimate</cite></small> </td>
-          </tr>
-        </table>
-        </div>
-      </div>
-    </body>
+function showPosition(position) {
+  const lat = position.coords.latitude;
+  const lng = position.coords.longitude;
+  reverseGeocode(lat, lng);
+}
+
+function reverseGeocode(lat, lng) {
+  const geocoder = new google.maps.Geocoder();
+  const latLng = new google.maps.LatLng(lat, lng);
+
+  geocoder.geocode({ 'location': latLng }, function(results, status) {
+    if (status === google.maps.GeocoderStatus.OK) {
+      if (results[0]) {
+        const address = results[0].formatted_address;
+        document.getElementById("address").innerText = "Address: " + address;
+      } else {
+        alert("No results found");
+      }
+    } else {
+      alert("Geocoder failed due to: " + status);
+    }
+  });
+}
+
+function showError(error) {
+  // Handle errors as shown in the previous answer
+}
+
+  </script>
+</body>
 </html>
