i removed some images, adjusted price calculator, and fixed issues with the email.

--- a/reviews.html
+++ b/reviews.html
@@ -34,7 +34,7 @@
             <a class="nav-link text-light" id="nav" href="form.html">Book Now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="about.html">About Us</a>
+            <a class="nav-link text-light disabled" href="about.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light disabled" href="#">Pricing</a>
@@ -55,7 +55,7 @@
       <div class="navbar-nav">
         <a class="nav-link text-center active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-center" href="form.html">Book Now</a>
-        <a class="nav-link text-center" href="about.html">About Us</a>
+        <a class="nav-link text-center disabled" href="about.html">About Us</a>
         <a class="nav-link text-center disabled" href="#">Pricing</a>
         <a class="nav-link text-center" href="reviews.html">Reviews</a>
         <div class="custom-separator mx-auto bg-primary"></div>
@@ -414,7 +414,7 @@
 
 
   <footer class="footer bg-black small text-center text-white-50">
-    <p>&copy; 2023 Thomson Team Car Service. All rights reserved.</p>
+    <p>&copy; 2023 Total Town Car Service. All rights reserved.</p>
   </footer>
 
 
