--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link text-light text-center" href="form.html">Book Now</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="about.html">About Us</a>
+                        <a class="nav-link text-light disabled" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light disabled" href="#">Pricing</a>
@@ -69,7 +69,7 @@
                 <a class="nav-link text-center active" aria-current="page" href="index.html">Home</a>
                 <div class="custom-separator mx-auto bg-primary"></div>
                 <a class="nav-link text-center" href="form.html">Book Now</a>
-                <a class="nav-link text-center" href="about.html">About Us</a>
+                <a class="nav-link text-center disabled" href="about.html">About Us</a>
                 <a class="nav-link text-center disabled" href="#">Pricing</a>
                 <a class="nav-link text-center" href="reviews.html">Reviews</a>
             </div>
@@ -277,7 +277,7 @@
         <!-- Pricing Table-->
         <div class="col-lg-4">
             <div class="bg-white p-5 rounded-lg shadow">
-                <h1 class="h6 text-uppercase font-weight-bold mb-4">Limo</h1>
+                <h1 class="h6 text-uppercase font-weight-bold mb-4">SUV</h1>
                 <!-- <h2 class="h1 font-weight-bold">$30<span class="text-small font-weight-normal ml-2">/ Hour</span></h2> -->
 
                 <div class="custom-separator mx-auto bg-dark"></div>
@@ -365,7 +365,7 @@
     </section>
     <!-- Footer-->
     <footer class="footer bg-black small text-center text-white-50">
-        <div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div>
+        <div class="container px-4 px-lg-5">Copyright &copy; 2023 Total Town Car Service. All rights reserved.</div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
