made minor changes to form.js and changed brand anme.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
-                    <h1 class="mx-auto my-0 text-uppercase">Black Taxi</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Transportations</h2>
+                    <!-- <h1 class="mx-auto my-0 text-uppercase">Black Taxi</h1> -->
+                    <h1 class="text-white mx-auto mt-2 mb-5">Total Town Car Service and Taxi Msp</h1>
                     <div class="mainbtn"><a class="btn btn-primary" href="tel:(612)-999-5382">Call Now</a>
                         <a class="btn btn-primary" href="form.html">Book Now</a>
                     </div>
@@ -95,7 +95,7 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8">
-                    <h2 class="text-white mb-4">Total Town Car Serves and Taxi Msp</h2>
+                    <h2 class="text-white mb-4">Total Town Car Service and Taxi Msp</h2>
                     <p class="text-white-50">
                         Welcome to Thomson Team Car Service, your premier luxury transportation provider.
                         Our fleet of top-of-the-line vehicles includes luxury sedans, SUVs, and vans, all maintained to
