made minor changes everywhere.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Total Town Car Service</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -20,8 +20,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
-    <link rel="icon"
-        href="https://static.vecteezy.com/system/resources/previews/009/121/835/non_2x/ttc-logo-ttc-letter-ttc-letter-logo-design-initials-ttc-logo-linked-with-circle-and-uppercase-monogram-logo-ttc-typography-for-technology-business-and-real-estate-brand-vector.jpg" />
+    <link rel="icon" href="public/css/images/ttcs.jpeg" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="public/css/styles2.css">
     <link rel="stylesheet" href="public/css/test.css">
@@ -97,14 +96,14 @@
                 <div class="col-lg-8">
                     <h2 class="text-white mb-4">Total Town Car Service and Taxi Msp</h2>
                     <p class="text-white-50">
-                        Welcome to Thomson Team Car Service, your premier luxury transportation provider.
-                        Our fleet of top-of-the-line vehicles includes luxury sedans, SUVs, and vans, all maintained to
+                        Welcome to Total Town Car Service, your premier luxury transportation provider.
+                        Our fleet of top-of-the-line vehicles includes luxury sedans, SUVs, all maintained to
                         the highest standards for your comfort and safety. Whether you're traveling for business or
                         pleasure, we have the perfect vehicle to meet your needs.
-                        At Thomson Team Car Service, we pride ourselves on our personalized service and attention to
+                        At Total Town Car Service, we pride ourselves on our personalized service and attention to
                         detail. Our experienced professionals are dedicated to providing you with the highest level of
                         service, from the moment you make your reservation to the moment you reach your
-                        destination.Choose Thomson Team Car Service for all your luxury transportation needs and
+                        destination.Choose Total Town Car Service for all your luxury transportation needs and
                         experience the ultimate in style, comfort, and convenience.
                     </p>
                 </div>
@@ -317,7 +316,7 @@
                 autoplay muted loop></video>
             <div class="booksection mx-auto">
                 <h2 class="text-light text-center" style="font-family: 'Gruppo', cursive;">Call Now <a class="phonenum"
-                        href="tel:(612)-999-5382"> +1 (612)-999-5382 </a><br>
+                        href="tel:(612) 991-4250"> +1 (612) 991-4250 </a><br>
                     <hr>or
                     <hr>
                 </h2>
@@ -372,7 +371,7 @@
     <!-- Core theme JS-->
     <script src="public/js/scripts.js"></script>
     <script src="public/js/nav.js"></script>
-     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
 </body>
 
 </html>
