--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Gruppo&display=swap" rel="stylesheet">
+    <link rel="icon" href="public/css/images/ttcs.jpeg" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/form.css">
@@ -271,7 +272,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js'></script>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
-     <script src="lib/jquery/jquery.min.js"></script> 
+     <!-- <script src="lib/jquery/jquery.min.js"></script>  -->
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnA__D7we39j6KjrIAvAnff9Kj5PicuhE&libraries=places"></script>
     <script src="public/js/maps.js"></script>
