--- a/reviews.html
+++ b/reviews.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Gruppo&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Gruppo&display=swap" rel="stylesheet">
+  <link rel="icon" href="public/css/images/ttcs.jpeg" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="public/css/review.css">
   <link rel="stylesheet" href="public/css/test.css">
@@ -83,7 +83,7 @@
           <div class="modal-body">
             <section class="comment-form">
 
-              <form>
+              <form onsubmit="return validateForm()">
                 <div class="form-group">
                   <label for="name">Name:</label>
                   <input type="text" id="name" class="form-control" required>
@@ -103,14 +103,14 @@
                   <label for="comment">Comment:</label>
                   <textarea id="comment" rows="5" class="form-control" required></textarea>
                 </div>
-
+              
               </form>
             </section>
 
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="submitreview">Add Review</button>
+            <button type="submit" class="btn btn-primary" id="submitreview">Add Review</button>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
     </section>
     <section class="review">
       <h2>Great Service!</h2>
-      <p>Thomson Team Car Service provided excellent service. The staff was friendly and professional. They fixed my car
+      <p>Total Town Car Service provided excellent service. The staff was friendly and professional. They fixed my car
         quickly and it runs perfectly now. I highly recommend this company!</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9734;</span>
@@ -134,7 +134,7 @@
 
     <section class="review">
       <h2>Highly Recommended!</h2>
-      <p>I had an amazing experience with Thomson Team Car Service. The staff was very professional and they did a great
+      <p>I had an amazing experience with Total Town Car Service. The staff was very professional and they did a great
         job on my car. I would highly recommend this company to anyone looking for quality car service.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
@@ -147,7 +147,7 @@
 
     <section class="review">
       <h2>Excellent Work!</h2>
-      <p>Thomson Team Car Service did an excellent job fixing my car. They were very knowledgeable and friendly. I would
+      <p>Total Town Car Service did an excellent job fixing my car. They were very knowledgeable and friendly. I would
         definitely recommend this company to anyone in need of car repairs.</p>
       <div class="rating">
         <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
@@ -424,12 +424,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
     integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"
     crossorigin="anonymous"></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js'></script>
-  <script src="https://smtpjs.com/v3/smtp.js">
-  </script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnA__D7we39j6KjrIAvAnff9Kj5PicuhE&libraries=places"></script>
-
   <script src="public/js/nav.js"></script>
   <script src="public/js/reviews.js"></script>
 </body>
